--- a/components/web-captive-portal/CMakeLists.txt
+++ b/components/web-captive-portal/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_INC ${SOURCE_ROOT}/captive-portal)
 #-----------------------
 SET(CaptivePortal_Header
 		${SOURCE_ROOT}/captive-portal/CaptivePortal.h
+		${SOURCE_ROOT}/captive-portal/CaptivePortalHandle.h
 		${SOURCE_ROOT}/captive-portal/DNSServer.h
 		${SOURCE_ROOT}/captive-portal/WebServer.h
 		${SOURCE_ROOT}/captive-portal/WebServerHandler.h
@@ -13,6 +14,7 @@ SET(CaptivePortal_Header
 
 SET(CaptivePortal_Source
 		${SOURCE_ROOT}/captive-portal/CaptivePortal.c
+		${SOURCE_ROOT}/captive-portal/CaptivePortalHandle.c
 		${SOURCE_ROOT}/captive-portal/DNSServer.c
 		${SOURCE_ROOT}/captive-portal/WebServer.c
 		${SOURCE_ROOT}/captive-portal/WebServerHandler.c
